--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -367,6 +367,87 @@
   background-color: #343434;
 }
 
+#clien {
+  background-color: black;
+}
+#clien .container-fluid .d-flex {
+  justify-content: space-between;
+}
+#clien .container-fluid .d-flex .left {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: 545px;
+}
+#clien .container-fluid .d-flex .left .left-wrapper .title h1 {
+  color: white;
+  font-size: 40px;
+  font-family: "Montserrat";
+}
+#clien .container-fluid .d-flex .left .left-wrapper .content p {
+  color: white;
+  font-size: 16px;
+  font-family: "Montserrat";
+}
+#clien .container-fluid .d-flex .left .left-wrapper .action {
+  display: flex;
+  align-items: center;
+}
+#clien .container-fluid .d-flex .left .left-wrapper .action .total {
+  margin-right: 48px;
+}
+#clien .container-fluid .d-flex .left .left-wrapper .action .total p {
+  color: white;
+  font-size: 24px;
+  font-family: "Montserrat";
+}
+#clien .container-fluid .d-flex .left .left-wrapper .action .total p span {
+  font-size: 14px;
+}
+#clien .container-fluid .d-flex .left .left-wrapper .action .arrow {
+  margin-right: 32px;
+  border: 1px solid white;
+  border-radius: 24px;
+  height: 48px;
+}
+#clien .container-fluid .d-flex .left .left-wrapper .action .arrow img {
+  margin: 16px;
+}
+#clien .container-fluid .d-flex .right {
+  display: flex;
+  align-items: center;
+}
+#clien .container-fluid .d-flex .right .center {
+  width: 350px;
+  height: 350px;
+  background: #252525;
+  display: flex;
+  align-items: center;
+}
+#clien .container-fluid .d-flex .right .center img {
+  width: 270px;
+  margin: 0 auto;
+}
+#clien .container-fluid .d-flex .right .box {
+  background: #252525;
+  height: 300px;
+  width: 300px;
+  margin-left: 30px;
+  overflow: hidden;
+}
+#clien .container-fluid .d-flex .right .box-right {
+  width: 150px;
+  height: 300px;
+  background: #252525;
+  display: flex;
+  align-items: center;
+  margin-left: 30px;
+}
+#clien .container-fluid .d-flex .right .box-right img {
+  width: 270px;
+  margin: 0 auto;
+}
+
 #contact {
   background: black;
   padding: 100px 0;
@@ -431,11 +512,13 @@
 .footer .container .row .foo-left h1 {
   color: white;
   font-family: "Montserrat";
+  margin-bottom: 23px;
 }
 .footer .container .row .foo-left p {
   color: white;
   font-family: "Montserrat";
   line-height: 17px;
+  margin-bottom: 23px;
 }
 .footer .container .row .foo-right {
   display: flex;
