--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -412,7 +412,8 @@
 }
 
 #clien {
-  background-color: black;
+  background-color: #1F1F1F;
+  padding: 225px 0;
   .container-fluid {
     .d-flex {
       justify-content: space-between;
