--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -1,8 +1,8 @@
-@media screen and (min-width: 1200px) {
-	.container {
-		max-width:1200px;
-	}	
-}
+// @media screen and (min-width: 1200px) {
+// 	.container {
+// 		max-width:1200px;
+// 	}	
+// }
 
 body {
 	font-family: 'Poppins', sans-serif;
